--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
   <div class="row">
     <div class="col-md-12">
       <router-outlet />
+      <!-- <app-loading-spinner /> -->
       <!-- <app-auth /> -->
     </div>
   </div>
