--- a/src/app/bike-list/bike-detail/bike-detail.component.html
+++ b/src/app/bike-list/bike-detail/bike-detail.component.html
@@ -1,12 +1,19 @@
 <div class="row">
   <div class="col-xs-12">
     <button
-      type="submit"
+      type="text"
       class="btn btn-default"
       style="margin-right: 5px;"(click)="onEdit()">Edit Bike
     </button>
+
+    <button
+      type="text"
+      class="btn btn-danger"
+      style="margin-right: 5px;"(click)="onDelete()">Delete Bike
+  </button>
   </div>
 </div>
+
 <div class="row">
   <div class="col-xs-4">
   </div>
