--- a/src/app/bike-list/bike-edit/bike-edit.component.html
+++ b/src/app/bike-list/bike-edit/bike-edit.component.html
@@ -7,7 +7,8 @@
             type="submit"
             class="btn btn-default"
             [disabled]="!bikeForm.valid"
-            style="margin-right: 5px;">Save
+            style="margin-right: 5px;">
+            {{ isSaving ? 'Saving...' : 'Save' }}
           </button>
           <button
             type="button"
