--- a/src/app/bike-list/bike-list.component.css
+++ b/src/app/bike-list/bike-list.component.css
@@ -9,5 +9,5 @@
 .information{
   margin-top: 0 !important;
   margin-bottom: 20px !important;
-  color:rgb(75, 75, 181)
+  color:rgb(75, 75, 181);
 }
