--- a/src/app/bike-list/bike-detail/bike-detail.component.html
+++ b/src/app/bike-list/bike-detail/bike-detail.component.html
@@ -30,7 +30,7 @@
   </div>
   <div class="col-xs-10" >
     <h1>{{ bike.name }}</h1>
-    <span *ngIf="bike.rating">Rating: {{ bike.rating }}</span>
+    <!-- <span *ngIf="bike.rating">Rating: {{ bike.rating }}</span> -->
     <span>Quantity: {{ bike.quantity }}</span>
   </div>
 </div>
