--- a/src/app/bike-list/bike-list.component.html
+++ b/src/app/bike-list/bike-list.component.html
@@ -8,41 +8,38 @@
         <div class="alert alert-danger" style="text-align: center;" *ngIf="errorOccurred">
           An error occurred while fetching or saving the bikes!
         </div>
-        <!-- <div style="color: #a94442" *ngIf="errorOccurred">
-          An error occurred while fetching or saving the bikes!
-        </div> -->
       </ng-template>
     </div>
   </div>
 </div>
-<div *ngIf="!isLoading && !errorOccurred">
+<div *ngIf="!isLoading && !errorOccurred && bikes.length > 0">
   <div class="row">
     <div class="col-xs-12">
       <div class="row">
         <div class="col-xs-4">
           <button class="btn btn-default" (click)="onAddBike()">Add New  Bike</button>
         </div>
-        <!-- <div
-          class="col-xs-8"
-          style="color: #a94442"
-          *ngIf="errorOccurred">
-          An error occurred while fetching the bikes!
-        </div> -->
       </div>
     </div>
   </div>
   <hr>
   <div class="row">
-    <div class="col-md-5" id="bike-list">
-      <h4 class="information">Click on a row to see more details on the right panel !</h4>
+    <div class="col-md-6" id="bike-list">
+      <h4 *ngIf="showDisclaimer && bikes.length > 0" class="information">Click on a row to see more details on the right.</h4>
       <app-bike-item
         *ngFor="let bikeEl of bikes, let currentIndex = index; trackBy: trackByIndex"
         [bike]="bikeEl"
         [index]="currentIndex"
       />
     </div>
-    <div class="col-md-7">
+    <div class="col-md-6">
       <router-outlet />
     </div>
   </div>
+</div>
+<div
+  class="row alert alert-danger"
+  style="text-align: center;"
+  *ngIf="!isLoading && !errorOccurred && bikes.length == 0">
+  <div class="col-xs-12">Sorry, but your inventory is empty !</div>
 </div>
